testsuite/tests/typecheck/should_fail/T15807.stderr

T15807.hs:12:24: error:
    • Expecting one more argument to ‘f’
      Expected a type, but ‘f’ has kind ‘k0 -> *’
    • In the first argument of ‘App’, namely ‘f’
      In the type ‘App @f a’
      In the definition of data constructor ‘MkApp’
